# TalkScribe

./: BACKLOG.md  CMakeLists.txt  README.md
qml/: Main.qml
qml/components/: CustomWordsSettings.qml  DictationOverlay.qml  DictationStatsSection.qml  SnippetSettings.qml  TranscriptionModelSettings.qml
qml/styles/: Colors.qml  Theme.qml  qmldir
src/: main.cpp  miniaudio_impl.cpp  speexResampler.cpp  speexResampler.h
src/helpers/: MacWindowHelper.h  MacWindowHelper.mm
src/services/: AudioCapture.cpp  AudioCapture.h  DictationStatsService.cpp  DictationStatsService.h  GlobalDictationService.cpp  GlobalDictationService.h  LocalWhisperProvider.cpp  LocalWhisperProvider.h  ParakeetProvider.cpp  ParakeetProvider.h  TextPostProcessor.cpp  TextPostProcessor.h  WhisperModelManager.cpp  WhisperModelManager.h
